--- a/Data_Visualization/InteractiveVisualization.ipynb
+++ b/Data_Visualization/InteractiveVisualization.ipynb
@@ -1,32 +1,69 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: Interactive plots in this notebook will not appear in the GitHub view, You can view this including the plots in the html version [here](InteractiveVisualization.html), or you can download this notebook and run it locally to create the plots."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install packages we're gonna use\n",
+    "!pip install --upgrade numpy, plotly, pandas, pandas_datareader "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this tutorial we will explore interactive data visualization with Plotly. First, you need to make an account at https://plot.ly/Auth/login/?action=signup#/, and then go to https://plot.ly/settings/api, click regenerate key, copy it, and paste it in the `api_key` argument in the cell below, along with your username"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly\n",
+    "plotly.tools.set_credentials_file(username='', api_key='')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pylab inline\n",
+    "# import libraries we're gonna use\n",
+    "import numpy as np\n",
     "import pandas_datareader.data as web\n",
     "import datetime\n",
-    "import plotly\n",
     "import plotly.plotly as py\n",
     "import plotly.figure_factory as ff\n",
-    "%config InlineBackend.figure_format = 'retina'\n",
-    "matplotlib.rcParams['figure.figsize'] = 19,40\n",
-    "import seaborn as sns\n",
-    "sns.set_context('poster',font_scale=1.4)\n",
-    "sns.set_palette('colorblind')\n",
-    "sns.set_style('darkgrid')\n",
     "import plotly.graph_objs as go"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We're gonna look at financial data (stock market prices) that can be fetched (from e.g. Yahoo Finance) using pandas_datareader. `Datetime` is a nice python library that handles dates and times consistently in a way that many other libraries, such as pandas, use. Let's fetch data from the start of 2008 to the start of 2018."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = datetime.datetime(2008, 1, 1)\n",
+    "end = datetime.datetime(2018, 1, 1)"
    ]
   },
   {
@@ -35,22 +72,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = datetime.datetime(2008,1,1)\n",
-    "end = datetime.datetime(2018,1,1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# This fetches the stock prices for the S%P 500 for the dates we selected from Yahoo Finance.\n",
     "spy_df = web.DataReader('SPY', 'yahoo', start, end).reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +182,7 @@
        "4  111.247330  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,49 +193,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "High five! You successfully sent some data to your account on plotly. View your plot in your browser at https://plot.ly/~hsnee/0 or inside your plot.ly account where it is named 'plot from API'\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~hsnee/0.embed\" height=\"230px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~hsnee/325.embed\" height=\"230px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Our first interaction with Plotly. Plotly can create tables when passed a pandas DataFrame\n",
     "py.iplot(ff.create_table(spy_df.head()))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That wasn't extremely helpful... Let's try something more interesting.\n",
+    "\n",
+    "In general, the `plotly` syntax goes like this:\n",
+    "\n",
+    "`data`: a list of `plotly.graph_objs`, or a list of dictionaries.\n",
+    "\n",
+    "`layout`: usually optional, controls the aesthetics of your plot\n",
+    "\n",
+    "then you call\n",
+    "\n",
+    "`py.iplot(data, layout)`\n",
+    "\n",
+    "Let's look at some examples:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~hsnee/6.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~hsnee/327.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,19 +261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~hsnee/20.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~hsnee/329.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,33 +288,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~hsnee/8.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "data = [go.Scatter(x=spy_df.Date, y=rollingReturns(spy_df))]\n",
-    "\n",
-    "py.iplot(data)"
+    "Let's define a function `rollingReturns` that returns the 1-year returns for an invesment in a stock:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,56 +308,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~hsnee/10.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~hsnee/331.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "aapl_df = web.DataReader('AAPL', 'yahoo', start, end).reset_index()\n",
-    "data = [go.Scatter(x=spy_df.Date, y=spy_df.Close),go.Scatter(x=aapl_df.Date, y=aapl_df.Close) ]\n",
+    "data = [go.Scatter(x=spy_df.Date, y=rollingReturns(spy_df))]\n",
     "\n",
-    "updatemenus = list([\n",
-    "    dict(active=-1,\n",
-    "         buttons=list([   \n",
-    "            dict(label = 'SPY',\n",
-    "                 method = 'update',\n",
-    "                 args = [{'visible': [True, False]},\n",
-    "                         {'title': 'S&P 500'}]),\n",
-    "            dict(label = 'AAPL',\n",
-    "                 method = 'update',\n",
-    "                 args = [{'visible': [False, True]},\n",
-    "                         {'title': 'Apple'}]),\n",
-    "            dict(label = 'Both',\n",
-    "                 method = 'update',\n",
-    "                 args = [{'visible': [True, True]},\n",
-    "                         {'title': 'Apple vs S&P 500'}])\n",
-    "        ]),\n",
-    "    )\n",
-    "])\n",
-    "\n",
-    "layout = dict(title='Yahoo Finance', showlegend=False,\n",
-    "              updatemenus=updatemenus)\n",
-    "\n",
-    "fig = dict(data=data, layout=layout)\n",
-    "py.iplot(fig, filename='update_dropdown')\n"
+    "py.iplot(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding buttons:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -346,18 +352,21 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "aapl_df = web.DataReader('AAPL', 'yahoo', start, end).reset_index()\n",
-    "data = [go.Scatter(x=spy_df.Date, y=rollingReturns(spy_df), name='SPY'),go.Scatter(x=aapl_df.Date, y=rollingReturns(aapl_df), name='AAPL') ]\n",
+    "data = [go.Scatter(x=spy_df.Date, y=spy_df.Close, name='S%P 500'),\n",
+    "        go.Scatter(x=aapl_df.Date, y=aapl_df.Close, name='AAPL') ]\n",
     "\n",
+    "\n",
+    "# updatemenus tells plotly what to show and what to hide when a button is pressed\n",
     "updatemenus = list([\n",
-    "    dict(active=-1,\n",
-    "         buttons=list([   \n",
+    "    dict(active = -1, # initialize with no buttons active\n",
+    "         buttons = list([ # buttons is a list of dictionaries \n",
     "            dict(label = 'SPY',\n",
     "                 method = 'update',\n",
     "                 args = [{'visible': [True, False]},\n",
@@ -374,12 +383,74 @@
     "    )\n",
     "])\n",
     "\n",
-    "layout = dict(title='Apple vs S&P 500 1-year returns',\n",
+    "# layout here is not optional if you would like the buttons to show up\n",
+    "layout = dict(title='Yahoo Finance', showlegend=True,\n",
     "              updatemenus=updatemenus)\n",
     "\n",
     "fig = dict(data=data, layout=layout)\n",
-    "py.iplot(fig, filename='update_dropdown')\n",
-    "\n"
+    "f = py.iplot(fig, filename='update_dropdown')\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~hsnee/10.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aapl_df = web.DataReader('AAPL', 'yahoo', start, end).reset_index()\n",
+    "data = [go.Scatter(x=spy_df.Date, y=rollingReturns(spy_df), name='S&P 500'),\n",
+    "        go.Scatter(x=aapl_df.Date, y=rollingReturns(aapl_df), name='AAPL')]\n",
+    "\n",
+    "\n",
+    "# updatemenus tells plotly what to show and what to hide when a button is pressed\n",
+    "updatemenus = list([\n",
+    "    dict(active = -1, # initialize with no buttons active\n",
+    "         buttons = list([ # buttons is a list of dictionaries \n",
+    "            dict(label = 'SPY',\n",
+    "                 method = 'update',\n",
+    "                 args = [{'visible': [True, False]},\n",
+    "                         {'title': 'S&P 500'}]),\n",
+    "            dict(label = 'AAPL',\n",
+    "                 method = 'update',\n",
+    "                 args = [{'visible': [False, True]},\n",
+    "                         {'title': 'Apple'}]),\n",
+    "            dict(label = 'Both',\n",
+    "                 method = 'update',\n",
+    "                 args = [{'visible': [True, True]},\n",
+    "                         {'title': 'Apple vs S&P 500'}])\n",
+    "        ]),\n",
+    "    )\n",
+    "])\n",
+    "\n",
+    "# layout here is not optional if you would like the buttons to show up\n",
+    "layout = dict(title='Yahoo Finance', showlegend=True,\n",
+    "              updatemenus=updatemenus)\n",
+    "\n",
+    "fig = dict(data=data, layout=layout)\n",
+    "f = py.iplot(fig, filename='update_dropdown')\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also view your plots online by going to your account, or pressing the `Edit Chart` button in a plot\n"
    ]
   }
  ],
