fixing link to html version

--- a/Data_Visualization/InteractiveVisualization.ipynb
+++ b/Data_Visualization/InteractiveVisualization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: Interactive plots in this notebook will not appear in the GitHub view, You can view this including the plots in the html version [here](InteractiveVisualization.html), or you can download this notebook and run it locally to create the plots."
+    "Note: Interactive plots in this notebook will not appear in the GitHub view, You can view this including the plots in the html version [here](http://htmlpreview.github.io/?https://github.com/hsnee/CMU-DSC-Talks/blob/master/Data_Visualization/InteractiveVisualization.html), or you can download this notebook and run it locally to create the plots."
    ]
   },
   {
