--- a/Data_Visualization/InteractiveVisualization.ipynb
+++ b/Data_Visualization/InteractiveVisualization.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Interactive Visualization\n",
+    "## CMU Data Science Club\n",
+    "### Husni Almoubayyed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Follow along by visiting https://bit.ly/DSCInteractiveViz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Note: Interactive plots in this notebook will not appear in the GitHub view, You can view this including the plots in the html version [here](http://htmlpreview.github.io/?https://github.com/hsnee/CMU-DSC-Talks/blob/master/Data_Visualization/InteractiveVisualization.html), or you can download this notebook and run it locally to create the plots."
@@ -10,16 +30,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# pip install packages we're gonna use\n",
-    "!pip install --upgrade numpy, plotly, pandas, pandas_datareader "
+    "!pip install --upgrade numpy plotly pandas pandas_datareader "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "In this tutorial we will explore interactive data visualization with Plotly. First, you need to make an account at https://plot.ly/Auth/login/?action=signup#/, and then go to https://plot.ly/settings/api, click regenerate key, copy it, and paste it in the `api_key` argument in the cell below, along with your username"
    ]
@@ -27,7 +55,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "import plotly\n",
@@ -37,7 +69,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# import libraries we're gonna use\n",
@@ -51,15 +87,30 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "We talked about `pandas` last time. `pandas` actually stands for 'panel data' and was created with finance in mind (woth some core developers working at hedge funds). It provides an API to fetch financial data from Yahoo Finance, Morningstar, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're gonna look at financial data (stock market prices) that can be fetched (from e.g. Yahoo Finance) using pandas_datareader. `Datetime` is a nice python library that handles dates and times consistently in a way that many other libraries, such as pandas, use. Let's fetch data from the start of 2008 to the start of 2018."
+    "We're gonna look at financial data (stock market prices) fetched from Yahoo Finance using pandas_datareader. `Datetime` is a nice python library that handles dates and times consistently in a way that many other libraries, such as pandas, use. Let's fetch data from the start of 2008 to the start of 2018."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "start = datetime.datetime(2008, 1, 1)\n",
@@ -69,7 +120,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "# This fetches the stock prices for the S%P 500 for the dates we selected from Yahoo Finance.\n",
@@ -79,7 +134,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -194,7 +253,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -219,8 +282,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That wasn't extremely helpful... Let's try something more interesting.\n",
-    "\n",
+    "That wasn't extremely helpful... Let's try something more interesting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "In general, the `plotly` syntax goes like this:\n",
     "\n",
     "`data`: a list of `plotly.graph_objs`, or a list of dictionaries.\n",
@@ -237,7 +309,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -262,7 +338,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -297,7 +377,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "def rollingReturns(df, lookback=360):\n",
@@ -309,7 +393,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -333,7 +421,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Adding buttons:"
    ]
@@ -341,7 +433,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -395,7 +491,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -455,6 +555,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
